[package]
name = "ttt"
version = "0.1.0"
authors = ["Martin Habovstiak <martin.habovstiak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
rusqlite = "0.23.1"
chrono = "0.4.11"
ttt_common = { path = "../common" }
